FIX: in Firefox the 'SUPPORTED BY' were overlapping with each other

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -814,7 +814,7 @@ ul li {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
 }
 
 audio {
